@@ -38,6 +38,10 @@ tbd Sun Microsystems, Inc.
 	* Output of lfs quota has been made less detailed by default,
 	  old (verbose) output can be obtained by using -v option.
 
+Severity   : normal
+Bugzilla   : 16907
+Description: Prevent import from entering FULL state when server in recovery
+
 Severity   : major
 Bugzilla   : 16750
 Description: service mount cannot take device name with ":"
